[tool.poetry]
name = "acoustid-stats"
version = "0.1.0"
description = ""
authors = ["Lukáš Lalinský <lalinsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.45.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
flake8 = "^4.0.1"
mypy = "^0.950"
grpcio-tools = "^1.45.0"
types-protobuf = "^3.19.18"
grpc-stubs = "^1.24.10"
mypy-protobuf = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
